--- a/UnityDemo/Assembly-CSharp.csproj
+++ b/UnityDemo/Assembly-CSharp.csproj
@@ -46,16 +46,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scriptes\AndroidSDKImpl.cs" />
-     <Compile Include="Assets\Scriptes\BaseScene.cs" />
-     <Compile Include="Assets\Scriptes\HonorSDK.cs" />
-     <Compile Include="Assets\Scriptes\HonorSDKGameObject.cs" />
-     <Compile Include="Assets\Scriptes\IosSDKImpl.cs" />
-     <Compile Include="Assets\Scriptes\JSONParse.cs" />
-     <Compile Include="Assets\Scriptes\LoadTest.cs" />
-     <Compile Include="Assets\Scriptes\Scene1.cs" />
-     <Compile Include="Assets\Scriptes\Scene2.cs" />
-     <Compile Include="Assets\Scriptes\Scene3.cs" />
+     <Compile Include="Assets\Scriptes\scene\BaseScene.cs" />
+     <Compile Include="Assets\Scriptes\scene\ExitDialog.cs" />
+     <Compile Include="Assets\Scriptes\scene\LoadTest.cs" />
+     <Compile Include="Assets\Scriptes\scene\Scene1.cs" />
+     <Compile Include="Assets\Scriptes\scene\Scene2.cs" />
+     <Compile Include="Assets\Scriptes\scene\Scene3.cs" />
+     <Compile Include="Assets\Scriptes\sdk\AndroidSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\HonorSDK.cs" />
+     <Compile Include="Assets\Scriptes\sdk\HonorSDKGameObject.cs" />
+     <Compile Include="Assets\Scriptes\sdk\IosSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\JSONParse.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\MultiKeyDictionary.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Reporter.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\ReporterGUI.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\ReporterMessageReceiver.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Test\Rotate.cs" />
+     <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Test\TestReporter.cs" />
      <None Include="Assets\Plugins\Android\res\layout\abc_activity_chooser_view_list_item.xml" />
      <None Include="Assets\Plugins\Android\res\values-hy\values-hy.xml" />
      <None Include="Assets\Plugins\Android\res\layout\abc_popup_menu_item_layout.xml" />
