--- a/UnityDemo/Assembly-CSharp.csproj
+++ b/UnityDemo/Assembly-CSharp.csproj
@@ -52,10 +52,10 @@
      <Compile Include="Assets\Scriptes\scene\Scene1.cs" />
      <Compile Include="Assets\Scriptes\scene\Scene2.cs" />
      <Compile Include="Assets\Scriptes\scene\Scene3.cs" />
-     <Compile Include="Assets\Scriptes\sdk\AndroidSDKImpl.cs" />
-     <Compile Include="Assets\Scriptes\sdk\HonorSDK.cs" />
+     <Compile Include="Assets\Scriptes\sdk\AndroidSdkImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\HonorSDKGameObject.cs" />
-     <Compile Include="Assets\Scriptes\sdk\IosSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\HonorSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\IosSdkImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\JSONParse.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\MultiKeyDictionary.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Reporter.cs" />
