--- a/UnityDemo/Assembly-CSharp.csproj
+++ b/UnityDemo/Assembly-CSharp.csproj
@@ -46,21 +46,107 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\GCloudCoreCommon.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\GTrace\GTraceWrapper.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\GTrace\IGTraceWrapper.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\Log\GCloudSDKLog.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\Log\IGCloudSDKLog.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\RemoteConfig\IRemoteConfig.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\GCloudCore\RemoteConfig\RemoteConfig.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKBugly\Bugly\BuglyAgent.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKBugly\Bugly\BuglyCallback.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKBugly\Bugly\BuglyInit.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKBugly\Bugly\MSDKBuglyCrash.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDK.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKAccount.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKCrash.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKExtend.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKFriend.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKGame.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKGroup.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKLBS.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKLogin.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKNotice.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKPush.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKReport.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKTools.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\MSDKWebView.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\UnityEditor\UnityEditorData.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\JsonProp.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\MSDKDefine.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\MSDKError.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\MSDKLog.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\MSDKMessageCenter.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\Utils\MiniJSON.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\Manager\TencentSDKImpl.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Comm\JsonProp.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Comm\MiniJSON.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Comm\Singleton.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Comm\ULog.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Comm\Utils.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\IMidasPayService.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\MidasPayService.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasBaseRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasExtendInfo.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasGameRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasGetInfoResult.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasGoodsRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasMPInfo.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasMonthRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasReprovideRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasResponse.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\MidasLocal\Midas\Model\APMidasSubscribeRequest.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Buffer\BasicClassTypeUtil.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Buffer\ByteConverter.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Buffer\TBufferBase.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Buffer\TBufferReader.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Buffer\TBufferWriter.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\Common\TDataMasterLog.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\ITDataMaster.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\TDataMaster.cs" />
+     <Compile Include="Assets\GCloudSDK\Scripts\TDM\TDataMasterDefines.cs" />
      <Compile Include="Assets\Scriptes\scene\BaseScene.cs" />
      <Compile Include="Assets\Scriptes\scene\ExitDialog.cs" />
      <Compile Include="Assets\Scriptes\scene\LoadTest.cs" />
      <Compile Include="Assets\Scriptes\scene\Scene1.cs" />
      <Compile Include="Assets\Scriptes\scene\Scene2.cs" />
      <Compile Include="Assets\Scriptes\scene\Scene3.cs" />
-     <Compile Include="Assets\Scriptes\sdk\AndroidSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\AndroidSDKImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\CustomAndroidSdkImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\CustomIosSdkImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\HonorSDKGameObject.cs" />
      <Compile Include="Assets\Scriptes\sdk\HonorSDKImpl.cs" />
-     <Compile Include="Assets\Scriptes\sdk\IosSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdk\IosSDKImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\JSONParse.cs" />
      <Compile Include="Assets\Scriptes\sdk\NoSdkImpl.cs" />
      <Compile Include="Assets\Scriptes\sdk\SDKManager.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\AndroidSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\CustomAndroidSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\CustomIosSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\HonorSDKGameObject.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\HonorSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\HonorTencentSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\IosSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\JSONParse.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\NoSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\SDKManager.cs" />
+     <Compile Include="Assets\Scriptes\sdkdm\TencentAndroidImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\AndroidSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\CustomAndroidSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\CustomIosSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\Entity.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\HonorEmptyImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\HonorEntity.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\HonorMessageHandler.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\HonorSDKGameObject.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\HonorSDKImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\IBaseApi.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\IHonorApi.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\IosSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\JSONParse.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\MessageHandler.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\NoSdkImpl.cs" />
+     <Compile Include="Assets\Scriptes\sdknew\SDKManager.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\MultiKeyDictionary.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Reporter.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\ReporterGUI.cs" />
@@ -68,9 +154,12 @@
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Test\Rotate.cs" />
      <Compile Include="Assets\Unity-Logs-Viewer\Reporter\Test\TestReporter.cs" />
      <None Include="Assets\Plugins\Android\assets\honor_config.xml" />
+     <None Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\UnityEditor\Data\WeChatLoginData.txt" />
      <None Include="Assets\Plugins\Android\res\values-en-rUS\values-en-rUS.xml" />
      <None Include="Assets\Plugins\Android\res\values\values.xml" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
+     <None Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\UnityEditor\Data\LogoutData.txt" />
+     <None Include="Assets\GCloudSDK\Scripts\MSDKCore\MSDK\UnityEditor\Data\LoginData.txt" />
      <None Include="Assets\Plugins\Android\res\values-zh-rCN\values-zh-rCN.xml" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
